[gd_scene load_steps=4 format=3 uid="uid://cv1se5bkvhgi5"]

[ext_resource type="Script" path="res://scripts/Snow.gd" id="1_58y6p"]
[ext_resource type="Texture2D" uid="uid://cbg67ta50tmft" path="res://assets/sprites/New Piskel-1.png.png" id="2_dncts"]

[sub_resource type="CircleShape2D" id="CircleShape2D_7peh5"]
radius = 33.0606

[node name="Snow" type="Area2D"]
light_mask = 14
visibility_layer = 3
position = Vector2(-4, -4)
collision_layer = 16
collision_mask = 11
script = ExtResource("1_58y6p")

[node name="Sprite2D" type="Sprite2D" parent="."]
show_behind_parent = true
position = Vector2(91, 94)
scale = Vector2(6.34375, 6.15625)
texture = ExtResource("2_dncts")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
light_mask = 14
visibility_layer = 16
z_as_relative = false
position = Vector2(73, 78)
shape = SubResource("CircleShape2D_7peh5")

[node name="SnowmanCreationTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="ready" from="." to="." method="_on_ready"]
[connection signal="ready" from="SnowmanCreationTimer" to="." method="_on_snowman_creation_timer_ready"]
[connection signal="timeout" from="SnowmanCreationTimer" to="." method="_on_snowman_creation_timer_timeout"]
